fixed spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -418,7 +418,7 @@ html {
 
 } */
 
-@media only screen and (min-width: 2560px){
+@media only screen and (max-width: 2560px){
   .mainTitle {
     font-size: 180px;
     margin-top: 300px;
